--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,7 +10,8 @@
 Project:    plate
 Version:    4.1.3
 Assigned to:    al
-Primary use:    food     */
+Primary use:    food 
+    */
 :root {
 	--blue: #007bff;
 	--indigo: #6610f2;
@@ -25,7 +26,7 @@ Primary use:    food     */
 	--white: #fff;
 	--gray: #6c757d;
 	--gray-dark: #343a40;
-	--primary: #71b85f;
+	--primary: #97d9ff;
 	--secondary: #ffee58;
 	--success: #98bf44;
 	--danger: #f5543f;
@@ -171,7 +172,7 @@ a {
 }
 
 a:hover {
-	color: #71b85f;
+	color: #97d9ff;
 	text-decoration: underline;
 }
 
@@ -440,7 +441,7 @@ small,
 mark,
 .mark {
 	padding: 5px 10px;
-	background-color: #71b85f;
+	background-color: #97d9ff;
 }
 
 .list-unstyled {
@@ -2275,8 +2276,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
 	color: #212529;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .btn-primary:hover {
@@ -2291,8 +2292,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
 	color: #212529;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2410,16 +2411,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-	color: #71b85f;
+	color: #97d9ff;
 	background-color: transparent;
 	background-image: none;
-	border-color: #71b85f;
+	border-color: #97d9ff;
 }
 
 .btn-outline-primary:hover {
 	color: #212529;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2427,15 +2428,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-	color: #71b85f;
+	color: #97d9ff;
 	background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
 	color: #212529;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2552,7 +2553,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:hover {
-	color: #71b85f;
+	color: #97d9ff;
 	text-decoration: underline;
 	background-color: transparent;
 	border-color: transparent;
@@ -4323,8 +4324,8 @@ input[type="button"].btn-block {
 	z-index: 2;
 	color: #ffffff;
 	text-decoration: none;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .page-link:focus {
@@ -4351,8 +4352,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
 	z-index: 1;
 	color: #ffffff;
-	background-color: #71b85f;
-	border-color: #71b85f;
+	background-color: #97d9ff;
+	border-color: #97d9ff;
 }
 
 .page-item.disabled .page-link {
@@ -4424,7 +4425,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
 	color: #212529;
-	background-color: #71b85f;
+	background-color: #97d9ff;
 }
 
 .badge-primary[href]:hover, .badge-primary[href]:focus {
@@ -5005,7 +5006,7 @@ button.close {
 .bs-tooltip-top .arrow::before, .bs-tooltip-auto[x-placement^="top"] .arrow::before {
 	top: 0;
 	border-width: 6px 3px 0;
-	border-top-color: #71b85f;
+	border-top-color: #97d9ff;
 }
 
 .bs-tooltip-right, .bs-tooltip-auto[x-placement^="right"] {
@@ -5021,7 +5022,7 @@ button.close {
 .bs-tooltip-right .arrow::before, .bs-tooltip-auto[x-placement^="right"] .arrow::before {
 	right: 0;
 	border-width: 3px 6px 3px 0;
-	border-right-color: #71b85f;
+	border-right-color: #97d9ff;
 }
 
 .bs-tooltip-bottom, .bs-tooltip-auto[x-placement^="bottom"] {
@@ -5035,7 +5036,7 @@ button.close {
 .bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
 	bottom: 0;
 	border-width: 0 3px 6px;
-	border-bottom-color: #71b85f;
+	border-bottom-color: #97d9ff;
 }
 
 .bs-tooltip-left, .bs-tooltip-auto[x-placement^="left"] {
@@ -5051,7 +5052,7 @@ button.close {
 .bs-tooltip-left .arrow::before, .bs-tooltip-auto[x-placement^="left"] .arrow::before {
 	left: 0;
 	border-width: 3px 0 3px 6px;
-	border-left-color: #71b85f;
+	border-left-color: #97d9ff;
 }
 
 .tooltip-inner {
@@ -5059,7 +5060,7 @@ button.close {
 	padding: 6px 10px;
 	color: #ffffff;
 	text-align: center;
-	background-color: #71b85f;
+	background-color: #97d9ff;
 	border-radius: 0.25rem;
 }
 
@@ -5503,7 +5504,7 @@ button.close {
 }
 
 .bg-primary {
-	background-color: #71b85f !important;
+	background-color: #97d9ff !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -5591,7 +5592,7 @@ button.bg-danger:focus {
 }
 
 .border-primary {
-	border-color: #71b85f !important;
+	border-color: #97d9ff !important;
 }
 
 .border-secondary {
@@ -8461,7 +8462,7 @@ button.bg-danger:focus {
 }
 
 .text-primary {
-	color: #71b85f !important;
+	color: #97d9ff !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
