--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ Content header    h2,h1,h3
     #White : #ffffff
     #black : rgba(0, 0, 0, 0.7);
     #balck light : #151515
-    #green : #97d9ff
+    #green : #001453
 # */
 
 @charset "UTF-8";
@@ -219,7 +219,7 @@ h4 a:hover,
 h5 a:hover,
 h6 a:hover,
 [class^="heading-"] a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 h1,
@@ -371,7 +371,7 @@ mark,
 .mark {
   padding: 3px 5px;
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .big {
@@ -397,7 +397,7 @@ code {
 p [data-toggle="tooltip"] {
   padding-left: 0.25em;
   padding-right: 0.25em;
-  color: #97d9ff;
+  color: #001453;
 }
 
 p [style*="max-width"] {
@@ -417,12 +417,12 @@ p [style*="max-width"] {
 }
 
 ::selection {
-  background: #97d9ff;
+  background: #001453;
   color: #ffffff;
 }
 
 ::-moz-selection {
-  background: #97d9ff;
+  background: #001453;
   color: #ffffff;
 }
 
@@ -462,7 +462,7 @@ a:active {
 }
 
 a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 a[href*="tel"],
@@ -471,11 +471,11 @@ a[href*="mailto"] {
 }
 
 .link-hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .link-press {
-  color: #97d9ff;
+  color: #001453;
 }
 
 * + .privacy-link {
@@ -492,7 +492,7 @@ a[href*="mailto"] {
 }
 
 .link-border:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .link-social {
@@ -549,7 +549,7 @@ a[href*="mailto"] {
 }
 
 .block-center:hover .block-center-header {
-  background-color: #97d9ff;
+  background-color: #001453;
 }
 
 .block-center-title {
@@ -566,7 +566,7 @@ a[href*="mailto"] {
   }
 
   .block-center-header {
-    background-color: #97d9ff;
+    background-color: #001453;
   }
 }
 
@@ -580,7 +580,7 @@ a[href*="mailto"] {
 .box-minimal .box-minimal-icon {
   font-size: 50px;
   line-height: 50px;
-  color: #97d9ff;
+  color: #001453;
 }
 
 .box-minimal-divider {
@@ -588,7 +588,7 @@ a[href*="mailto"] {
   height: 4px;
   margin-left: auto;
   margin-right: auto;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .box-minimal-text {
@@ -668,7 +668,7 @@ a[href*="mailto"] {
   display: inline-block;
   width: 80px;
   height: 2px;
-  background: #97d9ff;
+  background: #001453;
 }
 
 * + .box-counter-title {
@@ -1165,7 +1165,7 @@ html .list-inline-md > * {
   top: 14px;
   height: 2px;
   width: 20px;
-  background-color: #97d9ff;
+  background-color: #001453;
 }
 
 .list-marked > li + li {
@@ -1318,7 +1318,7 @@ img {
 
 .table-custom.table-custom-primary thead th {
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
   border: 0;
 }
 
@@ -1394,7 +1394,7 @@ hr {
   display: inline-block;
   width: 60px;
   height: 2px;
-  background-color: #97d9ff;
+  background-color: #001453;
 }
 
 /*
@@ -1437,12 +1437,12 @@ hr {
 .button-default:active,
 .button-default.active {
   color: #ffffff;
-  background-color: #97d9ff;
-  border-color: #97d9ff;
+  background-color: #001453;
+  border-color: #001453;
 }
 
 .button-default.button-ujarak::before {
-  background: #97d9ff;
+  background: #001453;
 }
 
 .button-gray-100,
@@ -1467,8 +1467,8 @@ hr {
 .button-primary,
 .button-primary:focus {
   color: #ffffff;
-  background-color: #97d9ff;
-  border-color: #97d9ff;
+  background-color: #001453;
+  border-color: #001453;
 }
 
 .button-primary:hover,
@@ -1494,12 +1494,12 @@ hr {
 .button-default-outline:active,
 .button-default-outline.active {
   color: #ffffff;
-  background-color: #97d9ff;
-  border-color: #97d9ff;
+  background-color: #001453;
+  border-color: #001453;
 }
 
 .button-default-outline.button-ujarak::before {
-  background: #97d9ff;
+  background: #001453;
 }
 
 .button-ghost {
@@ -1509,7 +1509,7 @@ hr {
 
 .button-ghost:hover {
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .button-facebook,
@@ -1595,7 +1595,7 @@ hr {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #97d9ff;
+  background: #001453;
   z-index: -1;
   opacity: 0;
   transform: scale3d(0.7, 1, 1);
@@ -1714,8 +1714,8 @@ hr {
 .btn-primary:active,
 .btn-primary:focus {
   color: #ffffff;
-  background: #97d9ff;
-  border-color: #97d9ff;
+  background: #001453;
+  border-color: #001453;
 }
 
 .btn-primary:hover {
@@ -1756,7 +1756,7 @@ input:-webkit-autofill ~ .form-validation {
 }
 
 .form-wrap.has-focus .form-input {
-  border-color: #97d9ff;
+  border-color: #001453;
 }
 
 .form-wrap + * {
@@ -2039,7 +2039,7 @@ textarea.form-input {
 }
 
 .toggle-custom:checked ~ .checkbox-custom-dummy::after {
-  background: #97d9ff;
+  background: #001453;
   transform: translate(20px, -50%);
 }
 
@@ -2271,7 +2271,7 @@ textarea.form-input {
   display: block;
   width: 37px;
   height: 27px;
-  fill: #97d9ff;
+  fill: #001453;
   flex-shrink: 0;
 }
 
@@ -2430,7 +2430,7 @@ textarea.form-input {
 .breadcrumbs-custom-path a,
 .breadcrumbs-custom-path a:active,
 .breadcrumbs-custom-path a:focus {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .breadcrumbs-custom-path li {
@@ -2560,8 +2560,8 @@ textarea.form-input {
 .page-link:focus,
 .page-link:active {
   color: #ffffff;
-  background-color: #97d9ff;
-  border-color: #97d9ff;
+  background-color: #001453;
+  border-color: #001453;
 }
 
 .page-item.active > .page-link,
@@ -2569,8 +2569,8 @@ textarea.form-input {
 .page-item.active > .page-link:focus,
 .page-item.active > .page-link:active {
   color: #ffffff;
-  background-color: #97d9ff;
-  border-color: #97d9ff;
+  background-color: #001453;
+  border-color: #001453;
 }
 
 .page-item.disabled > .page-link,
@@ -2873,7 +2873,7 @@ html.boxed body {
 }
 
 .text-primary {
-  color: #97d9ff !important;
+  color: #001453 !important;
 }
 
 /*
@@ -3433,7 +3433,7 @@ html [class*="section-"].section-bottom-0 {
 * Accent Backgrounds
 */
 .bg-primary {
-  background-color: #97d9ff;
+  background-color: #001453;
 }
 
 .bg-primary + .bg-primary {
@@ -3553,7 +3553,7 @@ p.rights a {
 }
 
 p.rights a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 [style*="z-index: 1000;"] {
@@ -3777,7 +3777,7 @@ html:not(.lt-ie10) .not-animated {
 .loader .ball {
   width: 80px;
   height: 80px;
-  background-color: #97d9ff;
+  background-color: #001453;
   border-radius: 100%;
 }
 
@@ -3882,7 +3882,7 @@ html:not(.lt-ie10) .not-animated {
   font-size: 20px;
   line-height: 51px;
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
   overflow: hidden;
   text-align: center;
   text-decoration: none;
@@ -3970,7 +3970,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar {
   display: none;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-navbar-toggle {
@@ -4132,7 +4132,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-search .rd-search-form-submit:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-search-toggle {
@@ -4274,13 +4274,13 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-nav-item.focus .rd-nav-link,
 .rd-navbar-static .rd-nav-item.opened .rd-nav-link {
-  color: #97d9ff;
+  color: #001453;
   background: transparent;
 }
 
 .rd-navbar-static .rd-nav-item.focus > .rd-navbar-submenu-toggle,
 .rd-navbar-static .rd-nav-item.opened > .rd-navbar-submenu-toggle {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static .rd-nav-item.focus > .rd-navbar-submenu-toggle::before,
@@ -4307,7 +4307,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-nav-item > .rd-navbar-submenu-toggle:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static .rd-nav-item > .rd-navbar-submenu {
@@ -4390,7 +4390,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-dropdown-item.focus .rd-dropdown-link,
 .rd-navbar-static .rd-dropdown-item.opened .rd-dropdown-link {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static .rd-dropdown-link {
@@ -4398,7 +4398,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-dropdown-link:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static .rd-navbar-dropdown li > a,
@@ -4421,7 +4421,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-navbar-dropdown li > a:hover,
 .rd-navbar-static .rd-megamenu-list li > a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static .rd-navbar-dropdown li > a,
@@ -4441,7 +4441,7 @@ html.tablet .ui-to-top {
   font-family: "FontAwesome";
   font-size: inherit;
   line-height: inherit;
-  color: #97d9ff;
+  color: #001453;
   opacity: 0;
   visibility: hidden;
 }
@@ -4501,7 +4501,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-megamenu-list-link:hover {
-  color: #97d9ff;
+  color: #001453;
   background: transparent;
 }
 
@@ -4601,7 +4601,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-navbar-search-toggle:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-static.rd-navbar--is-clone {
@@ -4620,7 +4620,7 @@ html.tablet .ui-to-top {
   top: 0;
   right: 0;
   z-index: 1080;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-navbar-static .rd-navbar--has-dropdown {
@@ -4697,7 +4697,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-nav-wrap::-webkit-scrollbar-track {
-  background: #97d9ff;
+  background: #001453;
   border: none;
   border-radius: 0;
 }
@@ -5023,12 +5023,12 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-navbar-panel {
   color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-navbar-fixed .rd-navbar-nav-wrap {
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
 }
 
@@ -5037,7 +5037,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-nav-item.active .rd-nav-link,
 .rd-navbar-fixed .rd-nav-item.opened .rd-nav-link {
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-navbar-fixed .rd-nav-item:hover > .rd-navbar-submenu-toggle,
@@ -5065,7 +5065,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-navbar-dropdown > li.active > a,
 .rd-navbar-fixed .rd-navbar-dropdown > li.opened > a {
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-navbar-fixed .rd-navbar-megamenu .rd-megamenu-title {
@@ -5083,7 +5083,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-megamenu .rd-megamenu-title a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-fixed .rd-navbar-submenu-toggle {
@@ -5095,7 +5095,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-search .rd-search-form-submit:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-fixed .rd-navbar-search-toggle {
@@ -5103,11 +5103,11 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-search-toggle:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-fixed .rd-navbar-collapse {
-  background-color: #97d9ff;
+  background-color: #001453;
   box-shadow: 0 0 22px -4px rgba(0, 0, 0, 0.17);
 }
 
@@ -5210,7 +5210,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-navbar-sidebar .rd-nav-item.active .rd-nav-link {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-sidebar .rd-nav-item .rd-nav-link,
@@ -5237,7 +5237,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-navbar-sidebar .rd-nav-link:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-sidebar
@@ -5326,7 +5326,7 @@ html.rd-navbar-fixed-linked header {
   .rd-nav-item
   .rd-navbar--has-dropdown
   > .rd-navbar-submenu-toggle:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-sidebar .rd-nav-item > .rd-navbar-submenu-toggle::after,
@@ -5385,7 +5385,7 @@ html.rd-navbar-fixed-linked header {
 
 .rd-navbar-sidebar .rd-navbar-dropdown li > a:hover,
 .rd-navbar-sidebar .rd-megamenu-list li > a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-sidebar .rd-navbar-dropdown li > a,
@@ -5405,7 +5405,7 @@ html.rd-navbar-fixed-linked header {
   font-family: "FontAwesome";
   font-size: inherit;
   line-height: inherit;
-  color: #97d9ff;
+  color: #001453;
   opacity: 0;
   visibility: hidden;
 }
@@ -5479,7 +5479,7 @@ html.rd-navbar-fixed-linked header {
   .rd-navbar-dropdown
   .rd-navbar--has-dropdown.opened
   > .rd-navbar-submenu-toggle {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-navbar-sidebar
@@ -5613,7 +5613,7 @@ html.rd-navbar-fixed-linked header {
 
 .rd-navbar-classic.rd-navbar-static.rd-navbar--is-stuck,
 .rd-navbar-classic.rd-navbar-static.rd-navbar--is-clone {
-  border-bottom-color: #c4c4c4;
+  border-bottom-colors: #c4c4c4;
 }
 
 .rd-navbar-classic.rd-navbar-static.rd-navbar--is-stuck .rd-navbar-aside-outer,
@@ -5810,7 +5810,7 @@ html.rd-navbar-fixed-linked header {
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 @media (min-width: 768px) {
@@ -6104,7 +6104,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-search-results-live .search-link:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-search-results-live .search-error {
@@ -6122,7 +6122,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-search-results-live .search-title a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-search-results-live .search-list-item-all {
@@ -6144,7 +6144,7 @@ html.rd-navbar-fixed-linked header {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-search-results-live .search-submit:hover {
@@ -6232,7 +6232,7 @@ html.rd-navbar-fixed-linked header {
 .rd-search-results .search {
   color: #ffffff;
   padding: 0 0.25em;
-  background: #97d9ff;
+  background: #001453;
 }
 
 .rd-search-results .match {
@@ -6339,7 +6339,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-search-classic .rd-search-submit:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-search.rd-search-inline {
@@ -6368,7 +6368,7 @@ html.rd-navbar-fixed-linked header {
 }
 
 .rd-search.rd-search-inline .button-link:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .rd-search.rd-search-inline.form-sm .form-input {
@@ -6522,8 +6522,8 @@ html.rd-navbar-fixed-linked header {
   .tabs-line .nav-link:hover,
   .tabs-line .nav-link.active {
     color: #ffffff;
-    background: #97d9ff;
-    border-color: #97d9ff;
+    background: #001453;
+    border-color: #001453;
   }
 }
 
@@ -6556,8 +6556,8 @@ html.rd-navbar-fixed-linked header {
 .tabs-corporate .nav-link:hover,
 .tabs-corporate .nav-link.active {
   color: #ffffff;
-  background: #97d9ff;
-  border-color: #97d9ff;
+  background: #001453;
+  border-color: #001453;
 }
 
 .tabs-corporate .tab-content {
@@ -6616,13 +6616,13 @@ html.rd-navbar-fixed-linked header {
     transform: scale3d(0.7, 1, 1);
     transition: transform 0.4s, opacity 0.4s;
     transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-    background: #97d9ff;
+    background: #001453;
   }
 
   .tabs-horizontal.tabs-corporate .nav-link.active,
   .tabs-horizontal.tabs-corporate .nav-link:hover {
     color: #ffffff;
-    border-color: #97d9ff;
+    border-color: #001453;
     background-color: transparent;
   }
 
@@ -6660,7 +6660,7 @@ html.rd-navbar-fixed-linked header {
     left: 0;
     height: 4px;
     width: 0;
-    background: #97d9ff;
+    background: #001453;
     transition: 0.22s ease;
   }
 
@@ -6849,7 +6849,7 @@ html.rd-navbar-fixed-linked header {
   right: -1px;
   z-index: 2;
   width: 70px;
-  background: #97d9ff;
+  background: #001453;
   border-radius: 0 6px 0 0;
   transition: 0.33s all ease;
 }
@@ -6910,11 +6910,11 @@ html.rd-navbar-fixed-linked header {
 }
 
 .tooltip.bs-tooltip-top .arrow::before {
-  border-top-color: #97d9ff;
+  border-top-color: #001453;
 }
 
 .tooltip.bs-tooltip-bottom .arrow::before {
-  border-bottom-color: #97d9ff;
+  border-bottom-color: #001453;
 }
 
 /*
@@ -6953,7 +6953,7 @@ html.rd-navbar-fixed-linked header {
 .progress-linear .progress-bar-linear {
   width: 0;
   height: inherit;
-  background: #97d9ff;
+  background: #001453;
   transition: 1s all ease-in-out;
 }
 
@@ -7246,7 +7246,7 @@ html.rd-navbar-fixed-linked header {
   line-height: 1;
   cursor: pointer;
   pointer-events: auto;
-  background: #97d9ff;
+  background: #001453;
   color: #151515;
 }
 
@@ -7262,7 +7262,7 @@ html.rd-navbar-fixed-linked header {
 .owl-carousel .owl-next:hover {
   text-decoration: none;
   background: #151515;
-  color: #97d9ff;
+  color: #001453;
 }
 
 .owl-carousel .owl-prev.disabled,
@@ -7309,7 +7309,7 @@ html.rd-navbar-fixed-linked header {
 
 .owl-carousel .owl-dot.active span,
 .owl-carousel .owl-dot:hover span {
-  background: #97d9ff;
+  background: #001453;
 }
 
 .owl-carousel-classic {
@@ -7388,7 +7388,7 @@ html.rd-navbar-fixed-linked header {
   width: 30px;
   height: 30px;
   border-radius: 10em;
-  background-color: #97d9ff;
+  background-color: #001453;
   animation-iteration-count: infinite;
 }
 
@@ -7954,7 +7954,7 @@ body:not(.lg-from-hash)
 
 .lg-outer .lg-thumb-item.active,
 .lg-outer .lg-thumb-item:hover {
-  border-color: #97d9ff;
+  border-color: #001453;
 }
 
 .lg-outer .lg-thumb-item img {
@@ -8115,7 +8115,7 @@ body:not(.lg-from-hash)
 }
 
 .lg-progress-bar .lg-progress {
-  background-color: #97d9ff;
+  background-color: #001453;
   height: 5px;
   width: 0;
 }
@@ -10352,7 +10352,7 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
   padding: 5px;
   cursor: default;
   font-size: 15px;
-  background-color: #97d9ff;
+  background-color: #001453;
   color: #ffffff;
 }
 
@@ -10435,7 +10435,7 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 }
 
 .select2-container--default .select2-results__option[aria-selected="true"] {
-  background-color: #97d9ff;
+  background-color: #001453;
   color: #ffffff;
 }
 
@@ -10681,7 +10681,7 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 
 .layout-panel .isotope-filters ul li a.active,
 .layout-panel .isotope-filters ul li a:hover {
-  color: #97d9ff;
+  color: #001453;
 }
 
 .layout-panel .isotope-filters ul li a.active:after {
@@ -10745,7 +10745,7 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 }
 
 .thumbnail-small:hover {
-  background: #97d9ff;
+  background: #001453;
   color: #ffffff;
 }
 
