--- a/css/style.css
+++ b/css/style.css
@@ -10825,6 +10825,7 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
     width: 250px !important;
     margin: 0 auto !important;}
     .box-custom-2 img {
-    max-width: 100%;}
+    max-width: 100%;
+  }
 }
 
