--- a/css/style.css
+++ b/css/style.css
@@ -10805,6 +10805,34 @@ html:not(.ie-11):not(.ios) .parallax-disabled {
 }
 
 
+.mtooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.mtooltip .mtooltiptext {
+  font-size: 15px;
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.mtooltip:hover .mtooltiptext {
+  visibility: visible;
+}
+
 @media (max-width: 992px) {
   .rd-navbar-fixed .rd-navbar-brand img {
     width: auto !important;}
